CKA/samples/init-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp
      image: busybox
      command: ["sh", "-c", "echo hello world"]
