CKA/samples/single-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
spec:
  containers:
  - name: my-app
    image: busybox
    command: ['sh','-c','echo running']
    tty: true
    stdin: true
